<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddUserActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/parent_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:backgroundTint="@null"
            android:theme="@style/NoActionBar"
            app:navigationIcon="@drawable/menu"
            app:titleTextColor="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4AAAD1">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:id="@+id/text_sign_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="Create a Rider's Account!"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/ic_user" />

                        <EditText
                            android:id="@+id/addname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="#00000000"
                            android:hint="@string/name_login"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/layoutline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/ic_user" />

                        <EditText
                            android:id="@+id/addusername"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="#00000000"
                            android:hint="Username"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/layoutline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/ic_email" />

                        <EditText
                            android:id="@+id/addemail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="#00000000"
                            android:hint="@string/email_login"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/layoutline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/ic_password" />

                        <EditText
                            android:id="@+id/addpass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="#00000000"
                            android:hint="@string/password_login"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/layoutline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/ic_phone" />

                        <EditText
                            android:id="@+id/addphone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="#00000000"
                            android:hint="@string/phone_login"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/layoutline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnsignup"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorPrimaryDark"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:text="Add User"
                        android:textColor="@color/white" />


                </LinearLayout>

            </ScrollView>
        </RelativeLayout>


    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>